# IA_learning

./: .gitignore  .replit  README.md  Untitled.ipynb  app.py  chatBubbleStyles.css  index.html  langchainer.py  main.py  package-lock.json  package.json  pyproject.toml  quickstart.py
components/: AdviceOutputComponent.js  App.jsx  HeaderComponent.js  TravelForm.js
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/components/: AdviceOutput.jsx  App.jsx  Chatbot.jsx  Header.jsx
public/: index.html
